--- a/php/view/frontend/listPostsView.html
+++ b/php/view/frontend/listPostsView.html
@@ -26,7 +26,7 @@
 PostManager : Faire une boucle For ou Foreach pour créer toutes les instances de classe et les mettre dans un tableau   OKAYYYYYYY
 listPostsView : Faire une boucle pour créer un article par instance à partir du tableau    OKAYYYYYYY
 ensuite:
-	Créer un contrôleur pour les articles
+	Créer un contrôleur pour les articles    OKAYYYYYYYY
 	Router : S'occuper de $post = $controller->post($idPost);
 	Router : S'occuper de $posts = $controller->articleListPosts();
 	S'occuper des commentaires
