appel des articles sur la page Articles

--- a/php/view/frontend/listPostsView.html
+++ b/php/view/frontend/listPostsView.html
@@ -30,5 +30,6 @@ ensuite:
 	Router : S'occuper de $post = $controller->post($idPost);     OKAYYYYYYYY
 	Router : S'occuper de $posts = $controller->articleListPosts();
 	S'occuper des commentaires
+	Commenter tout le code
 	Connexion admin via .htaccess
 -->
