création de la classe Comment

--- a/php/view/frontend/listPostsView.html
+++ b/php/view/frontend/listPostsView.html
@@ -28,7 +28,7 @@ listPostsView : Faire une boucle pour créer un article par instance à partir d
 ensuite:
 	Créer un contrôleur pour les articles    OKAYYYYYYYY
 	Router : S'occuper de $post = $controller->post($idPost);     OKAYYYYYYYY
-	Router : S'occuper de $posts = $controller->articleListPosts();
+	Router : S'occuper de $posts = $controller->articleListPosts();     OKAAAYYYYYYY
 	S'occuper des commentaires
 	Commenter tout le code
 	Connexion admin via .htaccess
