fonctionnalité : ajouts de commentaires par les utilisateurs

--- a/php/view/frontend/addCommentView.html
+++ b/php/view/frontend/addCommentView.html
@@ -1,5 +1,5 @@
 <section class="form_section">
-    <form action="?<?= TAG_ACTION ?>=<?= ACTION_ADDCOMMENT ?>" method="post">
+    <form action="?<?= TAG_ACTION ?>=<?= ACTION_ADDCOMMENT ?>&<?= TAG_IDPOST ?>=<?= $post->getId() ?>" method="post">
         <div>
             <input type="text" id="comment" name="comment" />
         </div>
@@ -8,5 +8,3 @@
         </div>
     </form>
 </section>
-
-<!-- &<?= TAG_IDPOST ?>=<?= $data['id'] ?> -->
