--- a/php/view/frontend/loginView.html
+++ b/php/view/frontend/loginView.html
@@ -13,4 +13,5 @@
 	       <br />
 	       <input type="submit" value="Connexion" />
 	</form>
+	<a href="?<?= TAG_ACTION ?>=<?= ACTION_LOGINADMIN ?>" id="admin_login_button">Connexion administrateur</a>
 </section>
