--- a/php/view/admin/reportedCommentsAdminView.html
+++ b/php/view/admin/reportedCommentsAdminView.html
@@ -1,6 +1,5 @@
 <section id="admin_top_bar">
-	<a href="?<?= TAG_ACTION ?>=<?= ACTION_COMMENTSADMIN ?>" class="top_bar_link">Commentaires signalés</a>
-	<a href="#" class="top_bar_link">Nouvel article</a>
+	<a href="?<?= TAG_ACTION ?>=<?= ACTION_LOGINADMIN ?>" class="top_bar_link">Affichage accueil</a>
 	<a href="?<?= TAG_ACTION ?>=<?= ACTION_HOME ?>" class="top_bar_link">Affichage Utilisateur</a>
 	<a href="#" class="top_bar_link">Déconnexion</a>
 </section>
