--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,9 +259,31 @@ h2
 
 /* ADMIN VIEW */
 
-#hallo
+#admin_top_bar
 {
-	color: red;
+	padding-top: 1em;
+	display: flex;
+	justify-content: space-around;
+	background-image:linear-gradient(45deg, #ECECEC, #F4F4F4);
+	padding-bottom: 1em;
+	border-bottom: 1px solid #AFAFAF;
+}
+
+.top_bar_link
+{
+	text-decoration: none;
+	color: #000000;
+	background-color: #d0d0d0;
+	padding: 1em;
+	border: 1px solid #AFAFAF;
+	border-radius: 10px;
+	box-shadow: 1px 1px 1px #777777;
+	transition: all 0.3s ease-in-out;
+}
+
+.top_bar_link:hover
+{
+	background-color: #b0b0b0;
 }
 
 /* MEDIA QUERIES */
