--- a/php/view/frontend/postView.html
+++ b/php/view/frontend/postView.html
@@ -19,7 +19,7 @@
 		foreach($comments as $comment)
 		{
 		?>
-			<p><strong><?= $comment->getUser()->getUsername() ?></strong> le <?= $comment->getDate() ?> <a href="#">Signaler</a></p>
+			<p><strong><?= $comment->getUser()->getUsername() ?></strong> le <?= $comment->getDate() ?> <a href="?<?= TAG_ACTION ?>=<?= ACTION_REPORTCOMMENT ?>&<?= TAG_IDPOST ?>=<?= $comment->getArticles() ?>&amp;id=<?= $comment->getId() ?>">Signaler</a></p>
            	<p><?= $comment->getContent() ?></p>
 	    <?php
 	    }
