--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,6 +281,11 @@ h2
 	transition: all 0.3s ease-in-out;
 }
 
+.top_bar_link:hover
+{
+	background-color: #b0b0b0;
+}
+
 /* ADMIN COMMENTS VIEW */
 
 #reported_comments_text
@@ -290,9 +295,60 @@ h2
 	text-align: center;
 }
 
-.top_bar_link:hover
+.admin_comment_box
 {
-	background-color: #b0b0b0;
+	border: 1px solid #AFAFAF;
+	background-image:linear-gradient(45deg, #ECECEC, #F4F4F4);
+	border-radius: 10px;
+	box-shadow: 2px 2px 2px #777777;
+	width: 80%;
+	text-align: center;
+	text-decoration: none;
+	color: black;
+	padding: 1em;
+	margin: auto;
+	margin-bottom: 1em;
+}
+
+.edit_comments_box
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+.normalise_comment
+{
+	text-decoration: none;
+	padding: 1em;
+	color: #000000;
+	background-color: #42FF58;
+	border: 1px solid #AFAFAF;
+	border-radius: 10px;
+	box-shadow: 1px 1px 1px #777777;
+	transition: all 0.3s ease-in-out;
+}
+
+.normalise_comment:hover
+{
+	background-color: #00AD11;
+}
+
+.delete_comment
+{
+	text-decoration: none;
+	padding: 1em;
+	color: #000000;
+	background-color: #FF6060;
+	border: 1px solid #AFAFAF;
+	border-radius: 10px;
+	box-shadow: 1px 1px 1px #777777;
+	transition: all 0.3s ease-in-out;
+}
+
+.delete_comment:hover
+{
+	background-color: #D30000;
 }
 
 /* MEDIA QUERIES */
