--- a/php/view/admin/reportedCommentsAdminView.html
+++ b/php/view/admin/reportedCommentsAdminView.html
@@ -23,7 +23,7 @@
 		        </p>
 		    </div>
 		    <div class="edit_comments_box">
-		    	<a href="#" class="normalise_comment">Normaliser</a>
+		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_NORMALISECOMMENT ?>&amp;id=<?= $data->getId() ?>" class="normalise_comment">Normaliser</a>
 		    	<a href="#" class="delete_comment">Supprimer</a>
 		    </div>
 		</div>
