suppression des commentaires

--- a/php/view/admin/reportedCommentsAdminView.html
+++ b/php/view/admin/reportedCommentsAdminView.html
@@ -24,7 +24,7 @@
 		    </div>
 		    <div class="edit_comments_box">
 		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_NORMALISECOMMENT ?>&amp;id=<?= $data->getId() ?>" class="normalise_comment">Normaliser</a>
-		    	<a href="#" class="delete_comment">Supprimer</a>
+		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_DELETECOMMENT ?>&amp;id=<?= $data->getId() ?>" class="delete_comment">Supprimer</a>
 		    </div>
 		</div>
 	<?php
