--- a/php/view/frontend/header.html
+++ b/php/view/frontend/header.html
@@ -5,6 +5,12 @@
         <title><?= $title ?></title>
         <link href="public/css/style.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src='https://cdn.tiny.cloud/1/695vu04uw29rln6r0rlzx5fqhmw7vk5blu4cyvuvbvd4xsw9/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
+		<script>
+			tinymce.init({
+		    	selector: '#mytextarea'
+			});
+		</script>
     </head>
         
     <body>
