création de la vue de modification d'un article

--- a/php/view/admin/listPostsAdminView.html
+++ b/php/view/admin/listPostsAdminView.html
@@ -18,7 +18,7 @@
 		        </div>
 		    </div>
 		    <div class="edit_delete_post_box">
-		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_POST ?>&<?= TAG_IDPOST ?>=<?= $data->getId() ?>" class="edit_post_button">Modifier</a>
+		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_EDITPOST ?>&<?= TAG_IDPOST ?>=<?= $data->getId() ?>" class="edit_post_button">Modifier</a>
 		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_DELETEPOST ?>&<?= TAG_IDPOST ?>=<?= $data->getId() ?>"class="delete_post_button">Supprimer</a>
 		    </div>
 		</div>
