finalisation du style

--- a/php/view/admin/adminHomeTopBarView.html
+++ b/php/view/admin/adminHomeTopBarView.html
@@ -1,5 +1,5 @@
 <section id="admin_top_bar">
 	<a href="?<?= TAG_ACTION ?>=<?= ACTION_COMMENTSADMIN ?>" class="top_bar_link">Commentaires signalés</a>
-	<a href="?<?= TAG_ACTION ?>=<?= ACTION_ADDPOST ?>" class="top_bar_link">Nouvel article</a>
-	<a href="?<?= TAG_ACTION ?>=<?= ACTION_HOME ?>" class="top_bar_link">Affichage Utilisateur</a>
+	<a href="?<?= TAG_ACTION ?>=<?= ACTION_ADDPOST ?>" class="top_bar_link" id="top_bar_new_post">Nouvel article</a>
+	<a href="?<?= TAG_ACTION ?>=<?= ACTION_HOME ?>" class="top_bar_link">Affichage utilisateur</a>
 </section>
