--- a/php/view/admin/adminTopBarView.html
+++ b/php/view/admin/adminTopBarView.html
@@ -1,4 +1,4 @@
 <section id="admin_top_bar">
 	<a href="?<?= TAG_ACTION ?>=<?= ACTION_LOGINADMIN ?>" class="top_bar_link">Affichage accueil</a>
-	<a href="?<?= TAG_ACTION ?>=<?= ACTION_HOME ?>" class="top_bar_link">Affichage Utilisateur</a>
+	<a href="?<?= TAG_ACTION ?>=<?= ACTION_HOME ?>" class="top_bar_link">Affichage utilisateur</a>
 </section>
