--- a/php/view/frontend/listPostsView.html
+++ b/php/view/frontend/listPostsView.html
@@ -10,10 +10,8 @@
 		            <em>le <?= $data->getDate() ?></em>
 		        </div>
 		                
-		        <div>
-		        	<p class="content_list_post_view">
-		            	<?= $data->getContent() ?>
-		            </p>
+		       	<div class="content_list_post_view">
+		            <?= $data->getContent() ?>
 		        </div>
 		    </a>
 		<?php
