--- a/php/view/admin/reportedCommentsAdminView.html
+++ b/php/view/admin/reportedCommentsAdminView.html
@@ -11,11 +11,11 @@
 	            <strong><?= $data->getUser()->getUsername() ?></strong><em> le <?= $data->getDate() ?></em>
 	        </div>
 		                
-	    	<div>
-		        <p class="content_list_post_view">
-		           	<?= $data->getContent() ?>
-		        </p>
-		    </div>
+	    	
+		    <p class="text_content_comment_box">
+		        <?= $data->getContent() ?>
+		    </p>
+		    
 		    <div class="edit_comments_box">
 		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_NORMALISECOMMENT ?>&<?= TAG_IDCOMMENT ?>=<?= $data->getId() ?>" class="normalise_comment">Normaliser</a>
 		    	<a href="?<?= TAG_ACTION ?>=<?= ACTION_DELETECOMMENT ?>&<?= TAG_IDCOMMENT ?>=<?= $data->getId() ?>" class="delete_comment">Supprimer</a>
