--- a/php/view/frontend/header.html
+++ b/php/view/frontend/header.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <title><?= $title ?></title>
         <link href="public/css/style.css" rel="stylesheet" />
+        <link rel="icon" type="image/png" href="https://cdn.pixabay.com/photo/2014/04/02/14/12/book-306468_960_720.png" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src='https://cdn.tiny.cloud/1/695vu04uw29rln6r0rlzx5fqhmw7vk5blu4cyvuvbvd4xsw9/tinymce/5/tinymce.min.js' referrerpolicy="origin"></script>
 		<script>
