--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ html, body
 {
 	margin: 0;padding: 0;
 	font-family: 'Roboto', sans-serif;
-	background-color: #F9F9F9;
+	background-color: #FFFFFF;
 }
 
 /* HOME */
@@ -14,8 +14,9 @@ html, body
 
 	width: 100%;
 	height: 35em;
-	margin-top: -1em;
+	margin-top: 4em;
 	background-image: url("../images/landscape_mountains_alaska.jpg");
+	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	display: flex;
@@ -42,10 +43,11 @@ html, body
 	position: fixed;
 	width: 100%;
 	height: 4em;
+	margin-top: -4em;
 	margin-left: -2.5em;
 	background-color: #FFFCF9;
 	border-bottom: 1px solid #BFBFBF;
-	display: flex;
+	display: flex; /* !!!!!!!!! */
  	align-items: center;
  	justify-content: space-around;
  	list-style: none;
@@ -53,6 +55,7 @@ html, body
 
 .link_menu
 {
+	padding: 1.6em 0.4em;
 	text-decoration: none;
 	color: black;
 	transition: all 0.3s ease-in-out;
@@ -100,18 +103,16 @@ h2
 
 .article
 {
-	border: 1px solid #AFAFAF;
-	background-color: #ECECEC;
-	border-radius: 10px;
-	box-shadow: 2px 2px 2px #777777;
-	width: 80%;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	margin: auto;
 	text-decoration: none;
 	color: black;
-	padding: 1em;
-	margin: auto;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	border-bottom: 1px solid #CCCCCC;
 	transition: all 0.3s ease-in-out;
 }
 
@@ -124,25 +125,18 @@ h2
 {
 	font-weight: bold;
 }
-/*
+
 .content_list_post_view
 {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 2; // number of lines to show
-	-webkit-box-orient: vertical;
+	max-width: 80%;
+	text-align: center;
 }
-*/
 
 /* SINGLE ARTICLE SECTION */
 
 .single_article
 {
-	border: 1px solid #AFAFAF;
-	background-image:linear-gradient(45deg, #F4F4F4, #ECECEC);
-	border-radius: 10px;
-	box-shadow: 2px 2px 2px #777777;
+
 	width: 80%;
 	text-align: center;
 	text-decoration: none;
@@ -154,15 +148,11 @@ h2
 
 .comments_box
 {
-	border: 1px solid #AFAFAF;
-	background-image:linear-gradient(45deg, #FAFAFA, #F4F4F4);
-	border-radius: 10px;
-	box-shadow: 2px 2px 2px #777777;
 	width: 80%;
 	text-align: center;
 	text-decoration: none;
 	color: black;
-	padding: 1em;
+	padding: 0 1em;
 	margin: auto;
 	margin-top: 1em;
 	margin-bottom: 1em;
@@ -173,6 +163,50 @@ h2
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+.comment_box_report
+{
+	margin-bottom: 1em;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.comment_box
+{
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	border: 1px solid #AFAFAF;
+	border-radius: 50px;
+	width: 98%;
+	padding: 0.2em;
+	margin: auto;
+	background-color: #E5E5E5;
+
+}
+
+.comment_box_username
+{
+	margin-left: 1em;
+	margin-bottom: -1em;
+	font-weight: bold;
+}
+
+.comment_box_content
+{
+	margin-left: 1em;
+	margin-bottom: 0;
+	text-align: left;
+}
+
+.report_link
+{
+	margin-left: 1.5em;
+	color: #000000;
+	text-decoration: none;
+	font-weight: bold;
 }
 
 #comment
@@ -283,6 +317,8 @@ h2
 .top_bar_link
 {
 	text-decoration: none;
+	text-align: center;
+	margin: auto;
 	color: #000000;
 	background-color: #d0d0d0;
 	padding: 1em;
@@ -386,6 +422,12 @@ h2
 	margin-bottom: 1em;
 }
 
+.text_content_comment_box
+{
+	margin: auto;
+	padding: 1em 0;
+}
+
 .edit_comments_box
 {
 	display: flex;
@@ -427,9 +469,48 @@ h2
 	background-color: #D30000;
 }
 
+/* ADMIN POST VIEW */
+
+.tinymce_title
+{
+	margin-left: 1em;
+}
+
+.input_title
+{
+	margin-top: 1em;
+	margin-bottom: 1em;
+	margin-left: 1em;
+}
+
+.submit_button_admin
+{
+	margin-left: 1em;
+	padding: 0.5em;
+	border: 1px solid #AFAFAF;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: all 0.2s ease;
+}
+
+.submit_button_admin:focus
+{
+	background-color: #C6C6C6;
+}
+
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 640px) {
+
+	#header
+	{
+		height: 20em;
+	}
+
+	#header_text_1
+	{
+		max-width: 80%;
+	}
 
 	.link_menu
 	{
@@ -438,7 +519,7 @@ h2
 
 	.text_menu
 	{
-		font-size: 14px;
+		display: none;
 	}
 
 	#comment
@@ -446,4 +527,16 @@ h2
 		width: 20em;
 	}
 
+	.top_bar_link
+	{
+		font-size: 14px;
+		width: 6.2em;
+		padding: 0.5em;
+	}
+
+	#top_bar_new_post
+	{
+		padding-top: 1.05em;
+		padding-bottom: 1.05em;
+	}
 }
