--- a/php/view/frontend/indexView.html
+++ b/php/view/frontend/indexView.html
@@ -1,5 +1,7 @@
 <section id="home_text_section">
-    <p id="home_text">Texte introductif du site</br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+    <h2>Bienvenue sur le blog de Jean Forteroche</h2>
+    <p id="home_text">N'attendez plus pour découvrir le célèbre web-book du futur prix nobel de littérature et aventurier à ses heures perdues.<br />
+	N'hésitez pas à créer votre propre compte pour pouvoir interagir avec l'immense communauté qui s'est formée autour de l'oeuvre.<br />
+	Un billet simple pour l'Alaska, l'aventure d'une vie, une lecture qui vous fera voyager...</p>
     <h2>Derniers articles du blog :</h2>
 </section>
